tests/languages/fixtures/cpp/compile_fail_undeclared.stderr
compile_fail_undeclared.cpp: In function ‘int main()’:
compile_fail_undeclared.cpp:4:3: error: ‘a’ was not declared in this scope
   a = 0;
   ^
