tests/languages/fixtures/cpp/compile_fail_undeclared.cpp
#include <iostream>

int main() {
  a = 0;
}
